@startuml
'https://plantuml.com/class-diagram
note as simpleFactory
简单工厂模式
end note

interface Phone
class MiPhone {
    void make()
}
class IPhone {
    void make()
}
class PhoneFactory {
    Phone createPhone(String phoneName)
}

Phone <|.. MiPhone
Phone <|.. IPhone
Phone <..left PhoneFactory

@enduml